[gd_scene load_steps=2 format=3 uid="uid://bsjcx25q0wtyk"]

[ext_resource type="Script" path="res://Scripts/UI/menu_panel.gd" id="1_n46hb"]

[node name="MenuPanel" type="Panel"]
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_n46hb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Qubitos"

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="LeaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave"

[connection signal="button_up" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_button_up"]
